# TranspilerMB

./: AstNode.cpp  AstNode.h  CMakeLists.txt  CSTNode.cpp  CSTNode.h  ENFA.cpp  ENFA.h  README.MD  SymbolTable.cpp  SymbolTable.h  Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h  WebServer.cpp  WebServer.h  main.cpp  symbolTable.cpp  symbolTable.h
Documenten/: TO-groep voortgangsrapport.xlsx  Transpiler van js to staal.pptx
LR1ParserGenerator/: Grammar.cpp  Grammar.h  ImmutableHashable.cpp  ImmutableHashable.h  Item.cpp  Item.h  LR1ParseTableGenerator.cpp  LR1ParseTableGenerator.h  Symbol.cpp  Symbol.h  json.hpp  kdb_facilities.h  lr1_parse_table_gen.cpp  lr1_parse_table_gen.h  main.cpp  staal_fixed.json  test_grammar_0.json  test_grammar_1.json
WebInterface/: WebServer.cpp  WebServer.h  main.cpp
docs/: staal_PARSETABLE.json  taal.cfg  taal.json  test_grammar_0_PARSETABLE.json
inputs/: STaalCode.txt  STaalTest.txt  input1.json  staal_fixed.json  staal_fixed.json_PARSETABLE.json  tokenizer.json  var.json
testEnv/: index.html  runScript.c4  runScript.js
tokenizer/: ENFA.cpp  ENFA.h  Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h
voorbeeld staal code/: calculation.staal  fiboncci.staal  scoping.staal  typeChecking.staal
